--- a/tomo/templates/base.html
+++ b/tomo/templates/base.html
@@ -24,32 +24,6 @@
     <!-- <link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png"> -->
   </head>
 
-
-    <!-- Le javascript -->
-    <script type="text/x-mathjax-config">
-      MathJax.Hub.Config({
-        tex2jax: {
-          inlineMath: [ ['$','$'], ["\\(","\\)"] ]
-        }
-      });
-    </script>
-    <script type="text/javascript" src="{{ STATIC_URL }}MathJax/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
-    <script src="{{ STATIC_URL }}jquery.js" type="text/javascript"></script>
-    <script src="{{ STATIC_URL }}bootstrap-dropdown.js" type="text/javascript"></script>
-    <script src="{{ STATIC_URL }}bootstrap-modal.js" type="text/javascript"></script>
-    <script src="{{ STATIC_URL }}bootstrap-twipsy.js" type="text/javascript"></script>
-    <script src="{{ STATIC_URL }}bootstrap-popover.js" type="text/javascript"></script>
-    <script src="{{ STATIC_URL }}tomo.js" type="text/javascript"></script>
-    <script src="{{ STATIC_URL }}highlight.min.js" type="text/javascript"></script>
-    <script>hljs.initHighlightingOnLoad();</script>
-
-    <!-- Le fav and touch icons -->
-    <!-- <link rel="shortcut icon" href="images/favicon.ico">
-    <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png"> -->
-  </head>
-
   <body>
 
    <div class="navbar navbar-fixed-top">
@@ -122,6 +96,26 @@
         <p>&copy; Andrej Bauer, Matija Pretnar 2011</p>
       </footer>
     </div> <!-- /container -->
+
+    <!-- Le javascript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script type="text/x-mathjax-config">
+      MathJax.Hub.Config({
+        tex2jax: {
+          inlineMath: [ ['$','$'], ["\\(","\\)"] ]
+        }
+      });
+    </script>
+    <script type="text/javascript" src="{{ STATIC_URL }}MathJax/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+    <script src="{{ STATIC_URL }}jquery.js" type="text/javascript"></script>
+    <script src="{{ STATIC_URL }}bootstrap-dropdown.js" type="text/javascript"></script>
+    <script src="{{ STATIC_URL }}bootstrap-modal.js" type="text/javascript"></script>
+    <script src="{{ STATIC_URL }}bootstrap-twipsy.js" type="text/javascript"></script>
+    <script src="{{ STATIC_URL }}bootstrap-popover.js" type="text/javascript"></script>
+    <script src="{{ STATIC_URL }}tomo.js" type="text/javascript"></script>
+    <script src="{{ STATIC_URL }}highlight.min.js" type="text/javascript"></script>
+    <script>hljs.initHighlightingOnLoad();</script>
 
   </body>
 </html>
